[package]
name = "rust-rest-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web3 = "0.19.0"
jsonwebtoken = "8.1"
actix-rt = "2.5"
actix-web-httpauth = "0.6"
